--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -23,10 +23,11 @@ jobs:
             jq --raw-output '.issue.pull_request.url' "${GITHUB_EVENT_PATH}"
           )"
             gh api "${pr_url}" --jq '.head | .ref,.sha' |
-              read -rd '' PR_HEAD_BRANCH PR_HEAD_SHA
-          env_vars="PR_HEAD_BRANCH=${PR_HEAD_BRANCH}\n"
-          env_vars+="PR_HEAD_SHA=${PR_HEAD_SHA}\n"
-          echo -en "${env_vars}" >>"${GITHUB_ENV}"
+              read -rd '' PR_HEAD_REF PR_HEAD_SHA
+          echo "${PR_HEAD_SHA}"
+          echo "${PR_HEAD_REF}"
+          echo "PR_HEAD_REF=${PR_HEAD_REF}" >>"${GITHUB_ENV}"
+          echo "PR_HEAD_SHA=${PR_HEAD_SHA}" >>"${GITHUB_ENV}"
       - name: Set Commit Status to Pending
         uses: myrotvorets/set-commit-status-action@master
         with:
@@ -42,7 +43,7 @@ jobs:
         run: |
           run_id="$(
             gh run list \
-              --branch "${{ env.PR_HEAD_BRANCH }}" \
+              --branch "${{ env.PR_HEAD_REF }}" \
               --workflow "${{ env.WORKFLOW_TO_DOWNLOAD_ARTIFACT_FROM }}" \
               --status success \
               --json databaseId \
