--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -6,8 +6,8 @@ on:
       - edited
 permissions:
   contents: read
-  issues: read
-  pull-requests: read
+  issues: write
+  pull-requests: write
   statuses: write
 env:
   GH_TOKEN: ${{ github.token }}
