--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -17,13 +17,13 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.issue.pull_request && github.event.comment.body == '/run'
     steps:
-      - name: Get PR Branch
+      - name: Get PR Info
         run: |
           pr_url="$(
             jq --raw-output '.issue.pull_request.url' "${GITHUB_EVENT_PATH}"
           )"
           gh_pr_data="$(
-            gh api "${pr_url}"
+            gh api "${pr_url}" --header "X-GitHub-Api-Version: 2022-11-28"
           )"
           PR_HEAD_REF="$(
             jq --raw-output '.head.ref' <<<"${gh_pr_data}"
@@ -34,9 +34,13 @@ jobs:
           PR_NUMBER="$(
             jq --raw-output '.number' <<<"${gh_pr_data}"
           )"
+          REPO_FULL_NAME="$(
+            jq --raw-output 'head.repo.full_name' <<<"${gh_pr_data}"
+          )"
           echo "PR_HEAD_REF=${PR_HEAD_REF}" >>"${GITHUB_ENV}"
           echo "PR_HEAD_SHA=${PR_HEAD_SHA}" >>"${GITHUB_ENV}"
           echo "PR_NUMBER=${PR_NUMBER}" >>"${GITHUB_ENV}"
+          echo "REPO_FULL_NAME=${REPO_FULL_NAME}" >>"${GITHUB_ENV}"
       - name: Set Commit Status to Pending
         uses: myrotvorets/set-commit-status-action@master
         with:
@@ -62,17 +66,28 @@ jobs:
             --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md" \
             --dir gh_download
           cat gh_download/BUILD_DEPENDENCY_LICENSES.md
-          gh pr comment "${PR_NUMBER}" --body "Hi from GitHub CLI"
-      - name: Set Final Commit Status
-        uses: myrotvorets/set-commit-status-action@master
-        if: always()
-        with:
-          sha: ${{ env.PR_HEAD_SHA }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          status: ${{ job.status }}
-          context: Download Pip Licenses
-      - uses: actions/github-script@v6
-        with:
-          result-encoding: string
-          script: |
-            console.log(JSON.stringify(github.rest))
+          gh pr comment "${{ env.PR_NUMBER }}" --body "Hi from GitHub CLI"
+
+          gh api \
+            --header "Accept: application/vnd.github+json" \
+            --header "X-GitHub-Api-Version: 2022-11-28" \
+            --raw-field "state=${{ job.status }}" \
+            --raw-field "context='Download Pip Licenses' \
+            "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}"
+
+
+      # - name: Set Final Commit Status
+      #   uses: myrotvorets/set-commit-status-action@master
+      #   if: always()
+      #   with:
+      #     sha: ${{ env.PR_HEAD_SHA }}
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     status: ${{ job.status }}
+      #     context: Download Pip Licenses
+        # Thinking about getting to that status change myself
+      # - uses: actions/github-script@v6
+      #   with:
+      #     result-encoding: string
+      #     script: |
+      #       console.log(JSON.stringify(github.rest.repos))
+       
