--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -65,9 +65,15 @@ jobs:
           gh run download "${run_id}" \
             --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md" \
             --dir gh_download
+      - name: Do Something With the Artifact
+        run: |
           cat gh_download/BUILD_DEPENDENCY_LICENSES.md
+      - name: Comment PR
+        run: |
           gh pr comment "${{ env.PR_NUMBER }}" --body "Hi from GitHub CLI"
-
+      - name: Set Final Commit Status
+        if: always()
+        run: |
           gh api \
             --header "Accept: application/vnd.github+json" \
             --header "X-GitHub-Api-Version: 2022-11-28" \
