--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -19,36 +19,26 @@ jobs:
     steps:
       - name: Export PR Info
         run: |
-          pr_url="$(
-            jq --raw-output '.issue.pull_request.url' "${GITHUB_EVENT_PATH}"
-          )"
-          gh_pr_data="$(
-            gh api "${pr_url}" --header "X-GitHub-Api-Version: 2022-11-28"
-          )"
-          PR_HEAD_REF="$(
-            jq --raw-output '.head.ref' <<<"${gh_pr_data}"
-          )"
-          PR_HEAD_SHA="$(
-            jq --raw-output '.head.sha' <<<"${gh_pr_data}"
-          )"
-          PR_NUMBER="$(
-            jq --raw-output '.number' <<<"${gh_pr_data}"
-          )"
-          REPO_FULL_NAME="$(
-            jq --raw-output '.head.repo.full_name' <<<"${gh_pr_data}"
-          )"
-          echo "PR_HEAD_REF=${PR_HEAD_REF}" >>"${GITHUB_ENV}"
-          echo "PR_HEAD_SHA=${PR_HEAD_SHA}" >>"${GITHUB_ENV}"
-          echo "PR_NUMBER=${PR_NUMBER}" >>"${GITHUB_ENV}"
-          echo "REPO_FULL_NAME=${REPO_FULL_NAME}" >>"${GITHUB_ENV}"
+          pr_url="$(jq --raw-output '.issue.pull_request.url' "${GITHUB_EVENT_PATH}")"
+          gh_pr_data="$(gh api "${pr_url}" --header "X-GitHub-Api-Version: 2022-11-28")"
+          PR_HEAD_REF="$(jq --raw-output '.head.ref' <<<"${gh_pr_data}")"
+          PR_HEAD_SHA="$(jq --raw-output '.head.sha' <<<"${gh_pr_data}")"
+          PR_NUMBER="$(jq --raw-output '.number' <<<"${gh_pr_data}")"
+          REPO_FULL_NAME="$(jq --raw-output '.head.repo.full_name' <<<"${gh_pr_data}")"
+          
+          echo <<HEREDOC >>"${GITHUB_ENV}"
+          PR_HEAD_REF=${PR_HEAD_REF}
+          PR_HEAD_SHA=${PR_HEAD_SHA}
+          PR_NUMBER=${PR_NUMBER}
+          REPO_FULL_NAME=${REPO_FULL_NAME}
+          HEREDOC
       - name: Set Initial Commit Status
         if: always()
         run: |
-          gh api \
+          gh api "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}" \
             --header "X-GitHub-Api-Version: 2022-11-28" \
             --raw-field "state=pending" \
             --raw-field "context=Download Pip Licenses" \
-            "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}"
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -66,18 +56,19 @@ jobs:
           gh run download "${run_id}" \
             --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md" \
             --dir gh_download
+      # Note that the filename is the original filename, not the artifact name
       - name: Do Something With the Artifact
         run: |
           cat gh_download/BUILD_DEPENDENCY_LICENSES.md
       - name: Comment the PR
         run: |
-          gh pr comment "${{ env.PR_NUMBER }}" --body "Hi from GitHub CLI"
+          gh pr comment "${{ env.PR_NUMBER }}" \
+            --body "Hi from GitHub CLI"
       - name: Set Final Commit Status
         if: always()
         run: |
-          gh api \
+          gh api "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}" \
             --header "Accept: application/vnd.github+json" \
             --header "X-GitHub-Api-Version: 2022-11-28" \
             --raw-field "state=${{ job.status }}" \
-            --raw-field "context=Download Pip Licenses" \
-            "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}"
+            --raw-field "context=Download Pip Licenses"
