--- a/.github/workflows/upload-artifact.yml
+++ b/.github/workflows/upload-artifact.yml
@@ -23,15 +23,24 @@ jobs:
           pr_data="$(gh api "${pr_url}" --header "X-GitHub-Api-Version: 2022-11-28")"
           {
             echo "PR_HEAD_SHA=$(jq --raw-output '.head.sha' <<<"${pr_data}")"
-            echo "REPO_FULL_NAME=$(jq --raw-output '.head.repo.full_name' <<<"${pr_data}")"
           } >>"${GITHUB_ENV}"
       - name: Set Initial Commit Status
         if: always()
         run: |
-          gh api "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}" \
+          gh api "/repos/${{ github.repository }}/statuses/${{ env.PR_HEAD_SHA }}" \
             --header "X-GitHub-Api-Version: 2022-11-28" \
             --raw-field "state=pending" \
             --raw-field "context=Upload Workflows" \
+            --raw-field "target_url=https://example.com/build/status"
+            {
+              echo "## github.action: ${{ github.action }}"
+              echo "## github.actor_id: ${{ github.actor_id }}"
+              echo "## github.job: ${{ github.job }}"
+              echo "## github.repository_id: ${{ github.repository_id }}"
+              echo "## github.run_id: ${{ github.run_id }}"
+              echo "### target URL: https://github.com/gregalia/gha-learn/actions/runs/5361436299/job/14516701921?pr=16"
+            } >>$GITHUB_STEP_SUMMARY
+            
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -43,7 +52,7 @@ jobs:
       - name: Set Final Commit Status
         if: always()
         run: |
-          gh api "/repos/${{ env.REPO_FULL_NAME }}/statuses/${{ env.PR_HEAD_SHA }}" \
+          gh api "/repos/${{ github.repository }}/statuses/${{ env.PR_HEAD_SHA }}" \
             --header "Accept: application/vnd.github+json" \
             --header "X-GitHub-Api-Version: 2022-11-28" \
             --raw-field "state=${{ job.status }}" \
