--- a/.github/workflows/upload-artifact.yml
+++ b/.github/workflows/upload-artifact.yml
@@ -31,14 +31,8 @@ jobs:
             --header "X-GitHub-Api-Version: 2022-11-28" \
             --raw-field "state=pending" \
             --raw-field "context=Upload Workflows" \
-            {
-              echo "## github.action: ${{ github.action }}"
-              echo "## github.actor_id: ${{ github.actor_id }}"
-              echo "## github.job: ${{ github.job }}"
-              echo "## github.repository_id: ${{ github.repository_id }}"
-              echo "## github.run_id: ${{ github.run_id }}"
-              echo "### target URL: https://github.com/gregalia/gha-learn/actions/runs/5361436299/job/14516701921?pr=16"
-            } >>$GITHUB_STEP_SUMMARY
+            --raw-field "description=details:" \
+            --raw-field "target_url=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
 # github.action: __run_2
 # github.actor_id: 13774377
@@ -65,4 +59,5 @@ jobs:
             --raw-field "state=${{ job.status }}" \
             --raw-field "context=Upload Workflows" \
             --raw-field "target_url=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
-            --raw-field "description=some description"
+            --raw-field "description=details:"
+
