test heredoc to gh env

--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -66,6 +66,7 @@ jobs:
           b=c
           c=d
           HEREDOC
+          printenv
       - name: Set Final Commit Status
         if: always()
         run: |
