ttest github.env

--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -62,7 +62,7 @@ jobs:
       #       --body "Hi from GitHub CLI"
       - name: test heredoc to github env
         run: |
-          cat <<HEREDOC >>"${GITHUB_ENV}"
+          cat <<HEREDOC >>"${ github.env }"
           a=b
           b=c
           c=d
