--- a/.github/workflows/upload-pr-event.yml
+++ b/.github/workflows/upload-pr-event.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pr_event_payload
-          path: ${{ github.event }}
+          path: ${{ github.event_path }}
