--- a/.github/workflows/get_commands.yml
+++ b/.github/workflows/get_commands.yml
@@ -7,4 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get Commands
-        run: compgen -c | sort
+        run: compgen -c | sort > tee command_list
+      - uses: actions/upload-artifact@v3
+        with:
+          name: command_list
+          path: command_list
