Grab contexts from multiple events

--- a/.github/workflows/upload_gh_context_obj.yaml
+++ b/.github/workflows/upload_gh_context_obj.yaml
@@ -1,6 +1,9 @@
 name: GitHub Object Grabber
-run-name: GitHub Object Grabber
-on: pull_request
+run-name: 'GitHub Object Grabber: ${{ github.event_name }}'
+on: 
+  - pull_request
+  - push
+  - release
 permissions:
   contents: read
   issues: write
