--- a/.github/workflows/upload_gh_obj.yaml
+++ b/.github/workflows/upload_gh_obj.yaml
@@ -16,7 +16,9 @@ jobs:
     steps:
       - name: Dump GitHub Object JSON
         run: |
-          echo '${{ toJson(github) }}' | sed 's/"ghs_.*"/"***"/g' >github_${{ github.event_name }}_context.json
+          cat <<HEREDOC | sed 's/"ghs_.*"/"***"/g' >github_${{ github.event_name }}_context.json
+          ${{ toJson(github) }}
+          HEREDOC
       - name: Upload GitHub Object JSON
         uses: actions/upload-artifact@v3
         with:
