--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,5 +1,5 @@
 on:
-  - workflow_dispatch
+  - workflow_call
 env:
   dockerfile: build_setup/Dockerfile
   DOCKER_BUILDKIT: 1
@@ -7,8 +7,6 @@ jobs:
   docker_build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
       - name: Docker Build
         run: |
           docker build \
