--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,5 +1,7 @@
 on:
   - pull_request
 jobs:
+  checkout:
+    uses: ./.github/workflows/checkout.yml
   docker_build:
     uses: ./.github/workflows/docker_build.yml
