--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -22,3 +22,20 @@ jobs:
             --tag local_build:latest \
             --build-arg PYTHON_VERSION \
             .
+      - name: Extract Artifact From Image
+        run: |
+          mkdir -p artifacts
+          docker run --rm \
+            --mount "type=bind,src=./artifacts,dst=/artifacts" \
+            lambda-image:latest \
+            cp -r artifacts/. /artifacts
+      - name: Checksum Artifacts
+        run: |
+          for file in artifacts/*; do
+            sha256sum ${file} >>artifacts/checksums
+          done
+      - name: Upload Lambda Zip Artifact to Workflow Run
+        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
+        with:
+          name: artifacts
+          path: artifacts/*
