--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -29,13 +29,16 @@ jobs:
             --mount "type=bind,src=./artifacts,dst=/artifacts" \
             local_build:latest \
             cp -r artifacts/. /artifacts
-      - name: Checksum Artifacts
+      - name: Checksum Artifact
         run: |
-          for file in artifacts/*; do
-            sha256sum ${file} >>artifacts/checksums
-          done
+          sha256sum artifacts/random_bytes.tgz >>artifacts/checksums
       - name: Upload Lambda Zip Artifact to Workflow Run
         uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
         with:
-          name: artifacts
-          path: artifacts/*
+          name: checksum
+          path: artifacts/checksums
+      - name: Upload Lambda Zip Artifact to Workflow Run
+        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # v3.1.3
+        with:
+          name: random_bytes.tgz
+          path: artifacts/random_bytes.tgz
