--- a/.github/workflows/upload-env.yml
+++ b/.github/workflows/upload-env.yml
@@ -1,5 +1,6 @@
+---
 name: GHA Runner Env Grabber
-run-name: 'GitHub Object Grabber: ${{ github.event_name }}'
+run-name: 'GHA Runner Env Grabber: ${{ github.event_name }}'
 on:
   - pull_request
   - push
