--- a/.github/workflows/upload_gh_obj.yaml
+++ b/.github/workflows/upload_gh_obj.yaml
@@ -1,6 +1,6 @@
 ---
 name: GitHub Object Grabber
-run-name: 'GitHub Object Grabber: ${{ github.event_name }}'
+run-name: 'GitHub Object Grabber: ${{github.event_name}}, ${{github.ref_type}}'
 on:
   - pull_request
   - push
@@ -10,7 +10,7 @@ on:
 permissions:
   contents: read
 env:
-  GH_TOKEN: ${{ github.token }}
+  GH_TOKEN: ${{github.token}}
 jobs:
   grab:
     runs-on: ubuntu-latest
@@ -20,7 +20,7 @@ jobs:
       - name: Dump GitHub Object JSON
         run: |
           cat <<HEREDOC >${{env.OBJ_NAME}}
-          ${{ toJson(github) }}
+          ${{toJson(github)}}
           HEREDOC
       - name: Upload GitHub Object JSON
         uses: actions/upload-artifact@v3
