switch to target branches

--- a/.github/workflows/upload_gh_obj.yaml
+++ b/.github/workflows/upload_gh_obj.yaml
@@ -3,9 +3,8 @@ name: GitHub Object Grabber
 run-name: 'GitHub Object Grabber: ${{github.event_name}}, ${{github.ref_type}}'
 on:
   pull_request:
-    branches-ignore:
+    branches:
       - dev
-      - main
   push:
     branches: 
       - main
