--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -13,10 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-        with:
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            README.md
+        # with:
+        #   sparse-checkout-cone-mode: false
+        #   sparse-checkout: |
+        #     README.md
+        #     requirements.txt
       - name: Setup Python Version and Cache Pip Packages
         uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
         with:
