--- a/.github/workflows/booleaning-called.yaml
+++ b/.github/workflows/booleaning-called.yaml
@@ -7,6 +7,9 @@ on:
       NUMBER_INPUT:
         required: true
         type: number
+      NUMBER_INPUT_AUTO:
+        required: true
+        type: number
       BOOLEAN_INPUT:
         required: true
         type: boolean
@@ -14,28 +17,30 @@ jobs:
   try:
     runs-on: ubuntu-latest
     steps:
+      - name: Env
+        run: |-
+          env
+      - name: Inputs
+        run: |-
+          echo "::group::inputs
+          ${{toJson(inputs)}}
+          ::endgroup::"
+          echo "::group::github.event.inputs
+          ${{toJson(github.event.inputs)}}
+          ::endgroup::"
       - name: Echo
         env:
           STEP_STRING_INPUT: ${{inputs.STRING_INPUT}}
           STEP_NUMBER_INPUT: ${{inputs.NUMBER_INPUT}}
+          STEP_NUMBER_INPUT_AUTO: ${{inputs.NUMBER_INPUT_AUTO}}
           STEP_BOOLEAN_INPUT: ${{inputs.BOOLEAN_INPUT}}
-        run: |
+        run: |-
           echo "INPUT_STRING_INPUT: '${INPUT_STRING_INPUT}'"
           echo "INPUT_NUMBER_INPUT: '${INPUT_NUMBER_INPUT}'"
+          echo "INPUT_NUMBER_INPUT_AUTO: '${INPUT_NUMBER_INPUT_AUTO}'"
           echo "INPUT_BOOLEAN_INPUT: '${INPUT_BOOLEAN_INPUT}'"
 
           echo "STEP_STRING_INPUT: '${STEP_STRING_INPUT}'"
           echo "STEP_NUMBER_INPUT: '${STEP_NUMBER_INPUT}'"
+          echo "STEP_NUMBER_INPUT_AUTO: '${STEP_NUMBER_INPUT_AUTO}'"
           echo "STEP_BOOLEAN_INPUT: '${STEP_BOOLEAN_INPUT}'"
-
-          echo "::group::env
-          $(env)
-          ::endgroup::"
-
-          echo "::group::inputs
-          ${{toJson(inputs)}}
-          ::endgroup::"
-
-          echo "::group::github.event.inputs
-          ${{toJson(github.event.inputs)}}
-          ::endgroup::"
